--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -24,7 +24,12 @@
 @import 'pages/common/app';
 @import 'pages/common/menu';
 @import 'pages/common/lista';
+@import 'pages/common/fondo';
+@import 'pages/common/info';
 @import 'pages/home';
 @import 'pages/productos';
 @import 'pages/categoria';
 @import 'pages/producto';
+@import 'pages/empresa';
+@import 'pages/manipulacion';
+@import 'pages/contacto';
