--- a/src/css/pages/common/animaciones.scss
+++ b/src/css/pages/common/animaciones.scss
@@ -1,4 +1,6 @@
-
+//*************************************
+// pages/common/animaciones
+//*************************************
 .animation-fade{
   &.ng-enter {
     opacity: 0;
