--- a/src/css/pages/common/app.scss
+++ b/src/css/pages/common/app.scss
@@ -1,3 +1,6 @@
+//*************************************
+// pages/common/app
+//*************************************
 .view{
   left: 0;
   position: absolute;
