--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -1,5 +1,5 @@
 //*************************************
-// home
+// pages/home
 //*************************************
 .home{
   background-image: url('../img/fondos/f-home.jpg');
