--- a/src/js/component/common/fondo/fondo.html
+++ b/src/js/component/common/fondo/fondo.html
@@ -1,4 +1,5 @@
 <section class="fondo">
+  <div class="fondo-transparencia"></div>
   <header>
     <a target="_blank" href="http://fb.com" class="icon-facebook"></a>
     <a target="_blank" href="http://instagram.com" class="icon-instagram"></a>
