--- a/src/js/component/common/menu/menu.html
+++ b/src/js/component/common/menu/menu.html
@@ -12,6 +12,6 @@
   <section class="menu-modal" ng-class="{'activo' : $ctrl.toggleFullscreenActive}">
     <a ng-href="#/productos">Productos</a>
     <a ng-href="#/recetas">Recetas</a>
-    <a ng-href="#/contacto">Contacto</a>
+    <a ng-click="$ctrl.contacto('contacto')">Contacto</a>
   </section>
 </main>
