--- a/src/js/component/pages/contacto/contacto.html
+++ b/src/js/component/pages/contacto/contacto.html
@@ -1,7 +1,7 @@
+<fondo></fondo>
 <section class="masInfo contacto">
-  <div class="fondo"></div> <!-- component -->
-  <main>
-    <a href="">volver</a>
+  <main class="masInfo-conte">
+      <a href="javascript:history.back()" class="icon-close"></a>
     <header>
       <p>CONTÁCTANOS</p>
       <span>Tu opinión siempre nos ayuda a mejorar</span>
@@ -11,7 +11,7 @@
         <p>Atención al Consumidor:<span>800 20 6000</span></p>
         <p>Atención al Cliente:<span>600 600 7777</span></p>
         <p> 
-            Horarios de Atención<br> 
+            Horarios de Atención<br>
             Lunes a viernes 8:30 a 18:00 hrs.<br>
             Sábado 9:00 a 14:00 hrs.
         </p>
