--- a/src/js/component/pages/empresa/empresa.html
+++ b/src/js/component/pages/empresa/empresa.html
@@ -1,7 +1,7 @@
+<fondo></fondo>
 <section class="masInfo empresa">
-  <div class="fondo"></div> <!-- component -->
   <main class="masInfo-conte">
-    <a href="">volver</a>
+    <a ng-href="#/" class="icon-close"></a>
     <header></header>
     <section>
       <h1>Nuestra empresa</h1>
