--- a/src/css/pages/categoria.scss
+++ b/src/css/pages/categoria.scss
@@ -1,3 +1,6 @@
+//*************************************
+// pages/categoria
+//*************************************
 .categoria{
   @extend %pages;
   &-fondo{
