--- a/src/css/pages/common/lista.scss
+++ b/src/css/pages/common/lista.scss
@@ -1,3 +1,6 @@
+//*************************************
+// pages/common/lista
+//*************************************
 .lista{
   background: white;
   border-left: solid 1px $color-base;
@@ -9,7 +12,7 @@
   
   &.in{
     animation: fondo-entrada .8s forwards; 
-    animation-timing-function: ease-in-out;
+    animation-timing-function: ease;
     &>a{
       visibility: visible;
       opacity: 1;
@@ -66,6 +69,11 @@
   }
   li{
     margin: 2rem 0 0 0;
+    &:hover{
+      h2{
+        color: $color-base;
+      }
+    }
   }
   &-recetas{
     img{
