--- a/src/css/pages/common/loading.scss
+++ b/src/css/pages/common/loading.scss
@@ -1,5 +1,8 @@
+//*************************************
+// pages/common/loading
+//*************************************
 .loading{
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   height: 100vh;
