--- a/src/css/pages/producto.scss
+++ b/src/css/pages/producto.scss
@@ -1,3 +1,6 @@
+//*************************************
+// pages/producto
+//*************************************
 .producto{
   @extend %pages;
   &-fondo{
