--- a/src/css/pages/productos.scss
+++ b/src/css/pages/productos.scss
@@ -1,3 +1,6 @@
+//*************************************
+// pages/productos
+//*************************************
 .productos{
   @extend %pages;
   background-image: url('../img/fondos/f-productos.jpg');
