--- a/src/css/pages/common/lista.scss
+++ b/src/css/pages/common/lista.scss
@@ -45,7 +45,7 @@
     visibility: hidden;
     opacity: 0;
     &:after{
-      content: '\f00d';
+      content: '\f00d'; /* '\f00d'; */
       font-family: 'icomoon'
     }
   }
