--- a/src/css/index.build.css
+++ b/src/css/index.build.css
@@ -274,7 +274,7 @@ pre, code {
 /* ------------------------------------
       ·HELPERS
   -------------------------------------*/
-.wrapper, .loading, .menu-logo, .menu-modal, .lista span, .lista > a, .fondo header a, .fondo footer p, .masInfo, .masInfo-conte > a, .home, .home-nav-secondary p, .home-nav-secondary ul, .sociales a, .categoria-fondo, .producto-conte {
+.wrapper, .loading, .menu-logo, .menu-modal, .lista span, .lista > a, .fondo header a, .fondo footer p, .masInfo, .masInfo-conte > a, .home, .home-nav-secondary p, .home-nav-secondary ul, .sociales a, .categoria-fondo, .producto-conte, .contacto-form span, .contacto-form .icon-check {
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -1367,7 +1367,7 @@ menu {
   font-size: 1.1rem;
   font-weight: bold; }
 
-.contacto form {
+.contacto-form {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1379,26 +1379,34 @@ menu {
           flex-direction: column;
   margin-left: 5rem;
   width: 20rem; }
-
-.contacto input,
-.contacto textarea {
-  border: solid 1px #999;
-  -webkit-border-radius: 5px;
-          border-radius: 5px;
-  font-size: .8rem;
-  margin-bottom: .5rem;
-  padding: .3em .5em; }
-
-.contacto textarea {
-  min-height: 5rem;
-  max-height: 10rem;
-  resize: vertical;
-  overflow: auto; }
-
-.contacto button {
-  -webkit-border-radius: 5px;
-          border-radius: 5px;
-  background-color: #00A9E4;
-  color: white;
-  font-size: .8rem;
-  padding: .5rem; }
+  .contacto-form input,
+  .contacto-form textarea {
+    border: solid 1px #999;
+    -webkit-border-radius: 5px;
+            border-radius: 5px;
+    font-size: .8rem;
+    margin-bottom: .5rem;
+    padding: .3em .5em; }
+  .contacto-form textarea {
+    min-height: 5rem;
+    max-height: 10rem;
+    resize: vertical;
+    overflow: auto; }
+  .contacto-form button {
+    -webkit-border-radius: 5px;
+            border-radius: 5px;
+    background-color: #00A9E4;
+    color: white;
+    font-size: .8rem;
+    padding: .5rem; }
+  .contacto-form span {
+    margin-top: 1rem;
+    text-align: center; }
+  .contacto-form .icon-check {
+    background: green;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    color: white;
+    height: 2rem;
+    margin-left: .5rem;
+    width: 2rem; }
