feat: RRSS y mail de contacto cyndy

--- a/src/js/component/pages/home/home.html
+++ b/src/js/component/pages/home/home.html
@@ -1,8 +1,8 @@
 <main class="home">
 
   <div class="sociales">
-    <a target="_blank" href="http://fb.com" class="icon-facebook"></a>
-    <a target="_blank" href="http://instagram.com" class="icon-instagram"></a>
+    <a target="_blank" href="http://fb.com/sopraval" class="icon-facebook"></a>
+    <a target="_blank" href="http://instagram.com/sopravalchile" class="icon-instagram"></a>
   </div>
   
   <section class="home-nav">
@@ -16,7 +16,7 @@
     <ul>
       <li><a ng-click="$ctrl.masInfo('nuestra-empresa')">Empresa</a></li>
       <li><a ng-click="$ctrl.masInfo('uso-y-manipulacion-segura')">Uso y manipulación segura</a></li>
-      <li><a ng-click="$ctrl.masInfo()">Registro y Calificación</a></li>
+      <li><a >Registro y Calificación</a></li>
       <li><a href="http://www.agrosuper.com/denuncias/" target="_black">Denuncias Anónimas</a></li>
     </ul>
     <footer>@ Copyright Sopraval 2018</footer>
