--- a/src/css/index.build.css
+++ b/src/css/index.build.css
@@ -643,11 +643,11 @@ menu {
   margin: 0; }
 
 .menu {
-  left: 2rem;
+  left: 1rem;
   position: absolute;
-  top: 2rem; }
+  top: 1rem; }
   .menu img {
-    width: 12rem; }
+    width: 8rem; }
   .menu-logo {
     position: relative;
     -webkit-box-orient: vertical;
@@ -726,6 +726,13 @@ menu {
       opacity: 1; }
       .menu-modal.activo a {
         visibility: visible; }
+
+@media only screen and (min-width: 768px) {
+  .menu {
+    left: 2rem;
+    top: 2rem; }
+    .menu img {
+      width: 12rem; } }
 
 .lista {
   background: white;
@@ -894,21 +901,34 @@ menu {
         margin: 0; }
 
 .home {
-  background-image: url("../img/fondos/f-home.jpg");
+  background-image: url("../img/fondos/home-small.jpg");
   background-position: center;
   -webkit-background-size: cover;
           background-size: cover;
   overflow: hidden;
   position: relative; }
   .home-nav {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     z-index: 2; }
     .home-nav a {
       font-family: "Shadows Into Light", cursive;
-      font-size: 3.5rem;
+      font-size: 2.5rem;
       text-shadow: -3px 2px #222;
       position: relative; }
       .home-nav a:not(:last-child) {
-        margin-right: 7rem; }
+        margin-bottom: 2rem; }
       .home-nav a:after {
         content: '';
         position: absolute;
@@ -919,9 +939,12 @@ menu {
       .home-nav a:hover:after {
         background: white; }
     .home-nav-secondary {
+      height: -webkit-calc(100vh - 2rem - 74.66px);
+      height: calc(100vh - 2rem - 74.66px);
       position: absolute;
       background-color: #00A9E4;
-      bottom: -6.5rem;
+      bottom: -webkit-calc(-100% + 10rem);
+      bottom: calc(-100% + 10rem);
       font-family: "Fjalla One", sans-serif;
       left: 0;
       position: absolute;
@@ -929,7 +952,8 @@ menu {
       -webkit-transition: bottom ease-out 0.3s;
       -o-transition: bottom ease-out 0.3s;
       transition: bottom ease-out 0.3s;
-      width: 100vw; }
+      width: 100vw;
+      z-index: 2; }
       .home-nav-secondary.active {
         bottom: 0; }
       .home-nav-secondary p {
@@ -946,20 +970,31 @@ menu {
           left: 50%;
           position: absolute; }
       .home-nav-secondary ul {
-        padding: 1.5rem;
+        padding: 0 0 1.5rem 0;
+        margin: 0;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        height: -webkit-calc(100% - 4rem);
+        height: calc(100% - 4rem); }
+      .home-nav-secondary li {
         margin: 0; }
-      .home-nav-secondary li:not(:last-child) {
-        margin-right: 2rem; }
+        .home-nav-secondary li:not(:last-child) {
+          margin-bottom: 3rem; }
       .home-nav-secondary footer {
         background-color: #017EB4;
         font-size: .8rem;
         padding: .5rem;
-        width: 100%; }
+        width: 100%;
+        position: absolute;
+        bottom: 0; }
 
 .sociales {
   position: absolute;
-  top: 2rem;
-  right: 2rem;
+  top: .75rem;
+  right: .75rem;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -975,6 +1010,39 @@ menu {
     color: #777777; }
     .sociales a:not(:last-child) {
       margin-right: 1rem; }
+
+@media only screen and (min-width: 768px) {
+  .home {
+    background-image: url("../img/fondos/f-home.jpg"); }
+    .home-nav {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row; }
+      .home-nav a {
+        font-size: 3.5rem; }
+        .home-nav a:not(:last-child) {
+          margin: 0 7rem 0 0; }
+      .home-nav-secondary {
+        height: auto;
+        bottom: -6.5rem; }
+        .home-nav-secondary ul {
+          padding: 1.5rem;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: row;
+              -ms-flex-direction: row;
+                  flex-direction: row;
+          height: auto; }
+        .home-nav-secondary li:not(:last-child) {
+          margin: 0 2rem 0 0; }
+        .home-nav-secondary footer {
+          position: relative; }
+  .sociales {
+    position: fixed;
+    top: 2rem;
+    right: 2rem; } }
 
 .productos {
   background-image: url("../img/fondos/f-productos.jpg");
