--- a/src/css/pages/productos.scss
+++ b/src/css/pages/productos.scss
@@ -13,11 +13,9 @@
     background-color: rgba(0, 0, 0, .5);
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    padding: 12.5rem 2rem 0;
-    width: 16rem;
-    opacity: 0;
-    animation: nav-entrada .8s .6s forwards; 
+    min-height: 100vh;
+    width: 100%;
+    justify-content: center;
   }
   ul{
     font-family: $altfont;
@@ -41,17 +39,31 @@
   0%   { opacity: 0; }
   100% { opacity: 1; }
 }
-.background{
-  &-tradicional{
-    background-image: url('../img/fondos/f-tradicional.jpg');
+
+
+@include respond-to(l){
+  .productos{
+    nav{
+      height: 100vh;
+      padding: 12.5rem 2rem 0;
+      width: 16rem;
+      opacity: 0;
+      justify-content: flex-start;
+      animation: nav-entrada .8s .6s forwards; 
+    }
   }
-  &-jamones-pechugas{
-    background-image: url('../img/fondos/f-jamones-pechugas.jpg');
-  }
-  &-parrilleros{
-    background-image: url('../img/fondos/f-parrilleros.jpg');
-  }
-  &-practicos{
-    background-image: url('../img/fondos/f-practicos.jpg');
+  .background{
+    &-tradicional{
+      background-image: url('../img/fondos/f-tradicional.jpg');
+    }
+    &-jamones-pechugas{
+      background-image: url('../img/fondos/f-jamones-pechugas.jpg');
+    }
+    &-parrilleros{
+      background-image: url('../img/fondos/f-parrilleros.jpg');
+    }
+    &-practicos{
+      background-image: url('../img/fondos/f-practicos.jpg');
+    }
   }
 }
