--- a/src/css/pages/common/lista.scss
+++ b/src/css/pages/common/lista.scss
@@ -3,33 +3,34 @@
 //*************************************
 .lista{
   background: white;
-  border-left: solid 1px $color-base;
-  height: 100vh;
+  border-top: solid 1px $color-base;
   position: absolute;
-  right: -15rem;
-  top: 0;
-  width: 15rem;
-  
+  right: 0;
+  top: calc(100% - 6rem);
+  width: 100%;
+  display: none;
   &.in{
-    animation: fondo-entrada .8s forwards; 
-    animation-timing-function: ease;
-    &>a{
-      visibility: visible;
-      opacity: 1;
-    }
+    display: inline;
   }
   &>div{
     padding: 0 1rem;
   }
   span{
-    border-bottom: solid 1px $color-base;
     color: #666;
     font-family: $altfont-secundary;
     font-size: 1.3rem;
     height: 3rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     text-transform: capitalize;
     @extend .wrapper;
+    position: relative;
+    &:after{
+      bottom: -1rem;
+      content: '\f107'; /* '\f107'; */
+      font-family: 'icomoon';
+      left: 49%;
+      position: absolute;
+    }
   }
   &>a{
     background-color: $color-base;
@@ -50,11 +51,11 @@
     }
   }
   &>ul{
-    height: calc(100vh - 5rem);
     margin: 0;
-    overflow-y: scroll;
-    padding: 0 1rem 1rem;
-    text-align: center;
+    padding: 2rem 0 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   img{
     max-width: 9.4rem;
@@ -68,7 +69,10 @@
     }
   }
   li{
-    margin: 2rem 0 0 0;
+    margin: 0;
+    width: 13rem;
+    text-align: center;
+    padding: 1rem;
     &:hover{
       h2{
         color: $color-base;
@@ -84,4 +88,43 @@
 @keyframes lista-in {
   0%   {right: -15rem }
   100% {right: 0}
+}
+
+@include respond-to(l){
+  .lista{
+    height: 100vh;
+    top:0;
+    width: 15rem;
+    right: -15rem;
+    border-top: none;
+    border-left: solid 1px $color-base;
+    &.in{
+      animation: fondo-entrada .8s forwards; 
+      animation-timing-function: ease;
+      &>a{
+        visibility: visible;
+        opacity: 1;
+      }
+    }
+    &>ul{
+      height: calc(100vh - 5rem);
+      margin: 0;
+      overflow-y: scroll;
+      text-align: center;
+      display: block;
+      padding: 0 1rem 1rem;
+    }
+    li{
+      margin: 2rem 0 0 0;
+      width: 100%;
+      padding: 0;
+    }
+    span{
+      margin-top: 2rem;
+      border-bottom: solid 1px $color-base;
+      &:after{
+        content: '';
+      }
+    }
+  }
 }
